src/styles.scss
/* You can add global styles to this file, and also import other style files */
html, body { height: 100%; }
body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }

* {
  box-sizing: border-box;
  margin: 0;
}

main {
  padding: 16px;
  max-width: 1600px;
  margin: 0 auto;
}

.container {
  display: flex;
  flex-direction: column;
  place-items: center;
  grid-gap: 16px;
}

img {
  display: flex;
  width: 400px;
  height: 300px;
  opacity: 0;
}

@media (max-width: 599px) {
  img {
    width: 100px;
    height: 100%;
    aspect-ratio: 4 / 3;
    object-fit: cover;
  }
}

